2008-10-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	Add GnomeCmdFileSelector::is_active()

	* src/intviewer/viewer-window.cc:
	intviewer: kill obsoleted code for external tools

	* src/Makefile.am:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-remote-dialog.cc:
	* src/gnome-cmd-treeview.cc:
	* src/gnome-cmd-treeview.h:
	treeview: move common code to gnome-cmd-treeview.* files

2008-10-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-main-win.h:
	Kill dead code

2008-10-07  JP Rosevear  <jpr@novell.com>

	* plugins/cvs/interface.c:
	Fixed problem #555288 (build fix)

2008-10-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	GnomeCmdFileSelector: more C++ rework

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/intviewer/viewer-widget.cc:
	* src/intviewer/viewer-window.cc:
	* src/intviewer/viewer-window.h:
	Pass GnomeCmdFile to intviewer (instead of previous file path)

2008-10-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	create_column_titles() -> GnomeCmdFileList::create_column_titles()

2008-10-03  Yuriy Penkin  <yuriy.penkin@gmail.com>

	* configure.in:
	* data/gnome-commander.ebuild.in:
	* data/gnome-commander.spec.in:
	Fixed problem #554598 (GNOME Goal: LINGUAS)

2008-10-01  Yuriy Penkin  <yuriy.penkin@gmail.com>

	* configure.in:
	Fixed problem #554586 (AC_PROG_CXX macro problem)

2008-09-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-win.cc:
	GnomeCmdData: more C++ rework

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	GnomeCmdFileList::show_dir_size() -> GnomeCmdFileList::show_dir_tree_size()
