@@ -37,6 +37,9 @@
 #include "inputmodes.h"
 #include "datapresentation.h"
 
+using namespace std;
+
+
 typedef offset_type (*align_offset_to_line_start_proc)(GVDataPresentation *dp, offset_type offset);
 typedef offset_type (*scroll_lines_proc)(GVDataPresentation *dp, offset_type current_offset, int delta);
 typedef offset_type (*get_end_of_line_offset_proc)(GVDataPresentation *dp, offset_type start_of_line);
